--- a/src/components/sb-admin-2.css
+++ b/src/components/sb-admin-2.css
@@ -32,7 +32,6 @@ body {
 }
 
 
-
 /*//////////////////////////////////////////////////////////////////
 [ login ]*/
 
@@ -67,7 +66,7 @@ body {
 }
 
 .background-login{
-    position: absolute;
+    position: relative;
     width: 728px;
     height: 657px;
 }
@@ -78,12 +77,7 @@ body {
     margin-left: 132px;
 }
 
-@media only screen and (max-width:620px) {
-    /* For mobile phones: */
-    .background-login {
-      width:50vw;
-    }
-  }
+
 
 .elogbook-text {
     position: absolute;
@@ -112,7 +106,7 @@ body {
 
 .loginLogo{
     display: flex; 
-    position: relative;
+    position: absolute;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
@@ -1266,6 +1260,7 @@ body {
         margin-left: 24px;
         padding-left: 16px;
     }
+    
 
     .logbook-search-box{
         width:260px;
@@ -1470,9 +1465,13 @@ body {
         margin-top:8px;
     }
 
+    .sort-table-icon{
+       margin-left: 8px;
+    }
+
     .logbook-popup{
         position:fixed;
-        width: ;
+        /* width:; */
         height: 300px;
         background-color: white;
         color:black;
@@ -2218,3 +2217,180 @@ body>.navbar-collapse .logo {
     width: 256px;
     background-color: #008C8F;
 } */
+
+
+@media only screen and (max-width:650px) {
+    /* For mobile phones: */
+    .container-login {
+        width: 100%;
+        height: 100%;
+        /* min-height: 100vh; */
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: flex-start;
+        background:#EDF0F5;
+      }
+
+    .frame-login{
+        display: flex; 
+        position: relative;
+        flex-direction: column;
+        justify-content: flex-start;
+
+        width: 100%;
+        height: 100%;
+    }
+
+    .background-login {
+        width: 100%;
+        height: 100%;
+    }
+
+    .logo-elogbook{
+       width: 54px;
+       height: 54px;
+       margin-top: 24px;
+       margin-left:60px;
+    }
+    .elogbook-text {
+        font-size: 38px;
+        line-height: 34px;
+        font-style: normal;
+        font-weight: normal;
+        margin-top: 24px;
+        margin-left: 125px;
+    }
+    
+    .fkui-text{
+        font-weight: 300;
+        font-size: 18px;
+        line-height: 21px;
+        margin-top: 56px;
+        margin-left: 125px;;
+    }
+
+    .loginLogo{
+        display: none;
+    }
+    .form-login{
+        width: 100%;
+        height: 80%;
+        display: flex; 
+        position: absolute;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+        margin-top: 124px;  
+        margin-left: 0px;
+        background:#EDF0F5;
+    }
+    .form-input{
+    display: flex; 
+    position: relative;
+    flex-direction: column;
+    align-items: flex-start;
+    }
+
+    .form-forgot-password{
+        width: 100%;
+        height: 80%;
+        display: flex; 
+        position: absolute;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 124px;
+        margin-left: 0px;
+        padding-top: 140px;
+        background:#EDF0F5;
+    }
+    .login-text{
+        margin-top: 24px;
+    }
+    .confirm-send-email{
+        width: 100%;
+        height: 80%;
+        margin-top: 124px;  
+        margin-left: 0px;
+        background:#EDF0F5;
+    }
+    .confirm-send-email > div{
+        margin-left: 24px;
+    }
+    .form-new-password{
+        width: 100%;
+        height: 80%;
+        align-items: center;
+        margin-top: 124px;  
+        margin-left: 0px;
+        padding-top: 116px;
+        background:#EDF0F5;
+    }
+    .alert-password{
+        position: absolute;
+        width: 100%;
+        height: 92px;
+        margin-left: 16px;
+        margin-top: 124px;
+        margin-right: 0px;
+        z-index: 300;
+        background: #F3BB1C;
+        opacity: 0.2;
+        border-radius: 6px;
+        padding: 8px 16px 8px 16px;
+    }
+    .alert-password-saved{
+        position: absolute;
+        width: 100%;
+        height: 40px;
+        margin-left: 16px;
+        margin-top: 124px;
+        margin-right: 16px;
+        z-index: 300;
+        background: #3CC13B;
+        mix-blend-mode: normal;
+        opacity: 0.2;
+        border-radius: 6px; 
+        padding: 8px 16px 8px 16px;
+    }
+    
+    #alert-password-text{
+        position: absolute;
+        margin-left: 16px;
+        margin-top: 124px;
+        margin-right: 16px;
+        z-index: 300;
+        font-family: Source Sans Pro;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.15px;
+        opacity: 100%;
+        color: #F3BB1C; 
+    }
+    
+    #alert-password-saved-text{
+        position: absolute;
+        margin-left: 16px;
+        margin-top: 124px;
+        margin-right: 16px;
+        z-index: 300;
+        font-family: Source Sans Pro;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.15px;
+        opacity: 100%;
+        color: #3CC13B;
+        
+    }
+
+
+  }
+  
