--- a/src/components/sb-admin-2.css
+++ b/src/components/sb-admin-2.css
@@ -68,7 +68,7 @@ body {
 .background-login{
     position: relative;
     width: 728px;
-    height: 657px;
+    height: 100%;
 }
 
 .logo-elogbook{
@@ -359,6 +359,23 @@ body {
     line-height: 24px;
 }
 
+.login-sso-submit{
+    width: 296px;
+    height: 40px;
+    background:#F3BB1C;
+    border-radius: 6px;
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    vertical-align: middle;
+    color: #FFFDFF;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
 .confirm-send-email{
     display: flex; 
     position: absolute;
@@ -482,7 +499,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 256px;
-    height: 657px;
+    height: 100%;
     background-color: #096D6F;
     position: fixed;
 }
@@ -504,7 +521,7 @@ body {
 }
 
 .navbar-dashboard{
-    width: 1110px;
+    width: 100%;
     height: 64px;
     background-color:#004445;
     position: fixed;
@@ -579,6 +596,7 @@ body {
         background-color: #FFFDFF;
         border-radius: 4px;
         filter: drop-shadow(2px 4px 15px rgba(114, 110, 115, 0.2));
+        z-index: 1000;
     }
 
     .dropdown-menu-box-bottom{
@@ -1229,10 +1247,33 @@ body {
         width:160px;
         height:40px;
         background-color: #FFFDFF;
+        /* border: 1px solid #C5C9D7; */
+        box-sizing: border-box;
+        border-radius: 6px;
+        font-family: Source Sans Pro;
+        font-style: normal;
+        font-weight: normal;
+        /* color:#C5C9D7; */
+      }
+
+      .filter-date-dropdown{
+        position: relative;
+        z-index: 400;
+        width:160px;
+        height:40px;
+        background-color: #FFFDFF;
         border: 1px solid #C5C9D7;
         box-sizing: border-box;
         border-radius: 6px;
-        /* color:#C5C9D7; */
+        font-family: Source Sans Pro;
+        font-style: normal;
+        font-weight: normal;
+        padding:8px;
+      }
+
+     
+      .filter-date-dropdown ::placeholder{
+        color: #C43006 !important;
       }
 
       .filter-box-dropdown > input{
@@ -1398,7 +1439,7 @@ body {
     }
 
     .logbook-table-content tr:nth-child(even) > td:nth-child(1) {
-        border: 0px solid #000000;
+        /* border: 0px solid #000000; */
         border-bottom: 1px solid #DCE0E9;
         text-align:center;
         background-color: #DBF1FF;
@@ -1408,6 +1449,8 @@ body {
     .logbook-table-content tr:nth-child(even) > td:nth-child(2) {
         border: 0px solid #000000;
         border-bottom: 1px solid #DCE0E9;
+        border-left: 1px solid #DCE0E9;
+        border-right: 1px solid #DCE0E9;
         text-align:center;
         background-color: #DBF1FF ;
     }
@@ -1415,6 +1458,8 @@ body {
     .logbook-table-content tr:nth-child(even) > td:nth-child(17) {
         border: 0px solid #000000;
         border-bottom: 1px solid #DCE0E9;
+        border-left: 1px solid #DCE0E9;
+        border-right: 1px solid #DCE0E9;
         text-align:center;
         background-color: #DBF1FF ;
     }
@@ -2305,7 +2350,6 @@ body>.navbar-collapse .logo {
         align-items: center;
         margin-top: 124px;
         margin-left: 0px;
-        padding-top: 140px;
         background:#EDF0F5;
     }
     .login-text{
@@ -2323,20 +2367,20 @@ body>.navbar-collapse .logo {
     }
     .form-new-password{
         width: 100%;
-        height: 80%;
+        /* height: 80%; */
         align-items: center;
-        margin-top: 124px;  
+        margin-top: 100px;  
         margin-left: 0px;
         padding-top: 116px;
         background:#EDF0F5;
     }
     .alert-password{
         position: absolute;
-        width: 100%;
+        width: 92%;
         height: 92px;
-        margin-left: 16px;
+        margin-left:16px;
         margin-top: 124px;
-        margin-right: 0px;
+        margin-right: auto;
         z-index: 300;
         background: #F3BB1C;
         opacity: 0.2;
@@ -2345,7 +2389,7 @@ body>.navbar-collapse .logo {
     }
     .alert-password-saved{
         position: absolute;
-        width: 100%;
+        width: 92%;
         height: 40px;
         margin-left: 16px;
         margin-top: 124px;
@@ -2360,7 +2404,7 @@ body>.navbar-collapse .logo {
     
     #alert-password-text{
         position: absolute;
-        margin-left: 16px;
+        margin-left: 20px;
         margin-top: 124px;
         margin-right: 16px;
         z-index: 300;
@@ -2376,7 +2420,7 @@ body>.navbar-collapse .logo {
     
     #alert-password-saved-text{
         position: absolute;
-        margin-left: 16px;
+        margin-left: 20px;
         margin-top: 124px;
         margin-right: 16px;
         z-index: 300;
@@ -2391,6 +2435,58 @@ body>.navbar-collapse .logo {
         
     }
 
+    .sidebar-dashboard{
+        display: none;
+    }
+    .dashboard-box{
+        overflow-x: hidden;
+    }
+    .content-dashboard{
+        margin-left: 0px;
+        justify-content: center;
+        overflow: hidden;
+    }
+    .top-container-dashboard{
+        
+        width: 328px;
+        height: 167px;
+    }
+    .quote-dashboard{
+        display: flex;
+        flex-direction: column;
+        /* position: absolute; */
+        width:500px;
+        margin-top: 24px;
+        margin-left: auto;
+        margin-right: auto;
 
+    }
+
+    .quote-username-dashboard{
+        font-family: Source Sans Pro;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 24px;
+        letter-spacing: 0.18px;
+        color: #FFFDFF;
+        margin-bottom: 8px;
+    }
+
+    .quote-content-dashboard{
+        font-family: Source Sans Pro;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.15px;
+        color: #FFFDFF;
+    }
+
+
+    .quote-logo-dashboard{
+        display: none;
+    }
+    
   }
   
