--- a/src/components/sb-admin-2.css
+++ b/src/components/sb-admin-2.css
@@ -524,7 +524,7 @@ body {
     width: 100%;
     height: 64px;
     background-color:#004445;
-    position: fixed;
+    /* position: fixed; */
 }
 
 
