--- a/src/components/sb-admin-2.css
+++ b/src/components/sb-admin-2.css
@@ -14,35 +14,15 @@
   }
 
 body {
-    /* background-color: #f8f8f8; */
-    background-color:red;
-    font-family: Arial, Times, serif;
-    /* min-height: 100%; */
-    /* overflow:hidden;  */
+    font-family: Source Sans Pro, Arial, Times, serif;
 }
-
-#wrapper {
-    width: 50%;
+#app{
+    background-color:#EDF0F5;
 }
-
-#page-wrapper {
-    padding: 0 15px;
-    min-height: 568px;
-    background-color: #000;
-}
-
-
-/*//////////////////////////////////////////////////////////////////
-[ login ]*/
-
-.limiter {
-  width: 100%;
-  margin: 0 auto;
-}
-
 .container-login {
   width: 100%;
   height: 100%;
+  min-width: 1300px;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -52,7 +32,7 @@ body {
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: flex-start;
-  background:#EDF0F5;
+  background-color:#EDF0F5;
 }
 
 .frame-login{
@@ -61,14 +41,25 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    width: 100%;
+    width: 728px;
     height: 100%;
+    min-height: 100vh;
+}
+
+.container-form-login{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    padding:16px;
 }
 
 .background-login{
     position: relative;
     width: 728px;
     height: 100%;
+    min-height: 100vh;
 }
 
 .logo-elogbook{
@@ -140,13 +131,44 @@ body {
     margin-right: 8px;
 }
 
+.container-error-login{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    width: 100%;
+}
+
+.alert-login{
+    position: relative;
+    width: 100%;
+    height: 62px;
+    background-color: #F03738;
+    opacity: 0.2;
+    border-radius: 6px;
+    padding: 8px 16px 8px 16px;
+}
+
+.alert-login-text{
+    position: absolute;
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.15px;
+    opacity: 100%;
+    color: #F03738;
+    margin-top: 8px;
+    margin-left: 16px;
+}
+
 .form-login{
     display: flex; 
     position: absolute;
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 90px;  
-    margin-left: 856px;
+    margin-top: 80px;  
+    /* margin-left: 856px; */
 }
 
 .form-input{
@@ -154,6 +176,7 @@ body {
     position: absolute;
     flex-direction: column;
     align-items: flex-start;
+    margin-top: 24px;
 }
 
 .form-forgot-password{
@@ -360,6 +383,7 @@ body {
 }
 
 .login-sso-submit{
+    display: flex;
     width: 296px;
     height: 40px;
     background:#F3BB1C;
@@ -369,11 +393,12 @@ body {
     font-weight: normal;
     font-size: 16px;
     line-height: 20px;
-    text-align: center;
-    vertical-align: middle;
+    justify-content: center;
+    align-items: center;
     color: #FFFDFF;
     margin-top: 16px;
     margin-bottom: 16px;
+    cursor: pointer;
 }
 
 .confirm-send-email{
@@ -402,7 +427,7 @@ body {
 
 .alert-password{
     position: absolute;
-    width: 609px;
+    width: 590px;
     height: 62px;
     margin-left: 744px;
     margin-top: 16px;
@@ -415,7 +440,7 @@ body {
 
 .alert-password-saved{
     position: absolute;
-    width: 609px;
+    width: 590px;
     height: 62px;
     margin-left: 744px;
     margin-top: 16px;
@@ -427,7 +452,7 @@ body {
     padding: 8px 16px 8px 16px;
 }
 
-#alert-password-text{
+.alert-password-text{
     position: absolute;
     margin-left: 760px;
     margin-top: 24px;
@@ -442,7 +467,7 @@ body {
     color: #F3BB1C; 
 }
 
-#alert-password-saved-text{
+.alert-password-saved-text{
     position: absolute;
     margin-left: 760px;
     margin-top: 24px;
@@ -556,7 +581,7 @@ body {
       align-items: center;
       width: 137px;
       height: 32px;
-      left: 1200px;
+      right: 24px;
       color: #FFFDFF;
   }
 
@@ -596,7 +621,7 @@ body {
         background-color: #FFFDFF;
         border-radius: 4px;
         filter: drop-shadow(2px 4px 15px rgba(114, 110, 115, 0.2));
-        z-index: 1000;
+        z-index: 1;
     }
 
     .dropdown-menu-box-bottom{
@@ -821,8 +846,11 @@ body {
         overflow-y: auto;
         display: flex;
         flex-direction: column;
+        align-content: space-around;
         padding-bottom: 24px;
-        /* //width: 1062px; */
+        padding-right: 24px;
+        overflow-x: hidden;
+        width: 100%;
     }
 
     .top-container-dashboard{
@@ -1227,8 +1255,8 @@ body {
         display: flex;
         flex-direction: column;
         margin-right:16px;
-        position: relative;
-        z-index: 400;
+        /* position: relative; */
+        z-index: -1;
       }
 
       .filter-box-title{
@@ -1242,8 +1270,8 @@ body {
       }
 
       .filter-box-dropdown{
-        position: relative;
-        z-index: 400;
+        /* position: relative;
+        z-index: 400; */
         width:160px;
         height:40px;
         background-color: #FFFDFF;
@@ -1257,8 +1285,7 @@ body {
       }
 
       .filter-date-dropdown{
-        position: relative;
-        z-index: 400;
+        /* position: relative; */
         width:160px;
         height:40px;
         background-color: #FFFDFF;
@@ -1524,9 +1551,12 @@ body {
     }
 
     #logbook-new-entry{
+        float:right;
+        position:fixed;
+        right: 24px;
         width: 229px;
         height: 32px; 
-        background: #008C8F;
+        background-color: #008C8F;
         border-radius: 6px;
         cursor: pointer;
         font-family: Source Sans Pro;
@@ -1538,7 +1568,8 @@ body {
         align-items: center;
         justify-content: center;
         color: #FFFDFF;
-        margin-left: 433px;
+        z-index: -1;
+        /* margin-left: 433px; */
     }
 
     #logbook-save-entry{
@@ -1568,6 +1599,7 @@ body {
         overflow-y: auto;
         padding-bottom: 24px;
         height:100%;
+        z-index: -1;
     }
 
     .logbook-entry{
@@ -1607,8 +1639,6 @@ body {
     }
 
     .logbook-entry-input{
-        
-        /* position: relative; */
         width:326px;
         height:40px;
         border: 1px solid #C5C9D7;
@@ -1624,7 +1654,17 @@ body {
     }
 
     .logbook-entry-select{
-        position: relative;
+        
+        width:326px;
+        height:40px;
+        border: 1px solid #C5C9D7;
+        box-sizing: border-box;
+        border-radius: 6px;
+        margin-bottom: 16px;
+    }
+
+    .logbook-entry-select{
+        
         width:326px;
         height:40px;
         border: 1px solid #C5C9D7;
@@ -1735,7 +1775,7 @@ body {
     .skdi-row1{
         display: flex;
         flex-direction: row;
-        position: relative;
+        z-index: -1;
     }
 
     .skdi-row1-title{
@@ -1750,6 +1790,7 @@ body {
 
     .skdi-row1-info{
         display: flex;
+        position: relative;
         flex-direction: row;
         font-family: Source Sans Pro;
         font-style: normal;
@@ -1886,7 +1927,7 @@ body {
         display: flex;
         flex-direction: row;
         align-items: center;
-        width: 1110px;
+        width: 100%;
         height: 48px;
         background-color:#004445;
         font-family: Source Sans Pro;
@@ -2266,19 +2307,22 @@ body>.navbar-collapse .logo {
 
 @media only screen and (max-width:650px) {
     /* For mobile phones: */
+
     .container-login {
+        min-width: 0px;
         width: 100%;
-        height: 100%;
-        /* min-height: 100vh; */
+        height: 80%;
         display: -webkit-box;
         display: -webkit-flex;
         display: -moz-box;
         display: -ms-flexbox;
         display: flex;
+        flex-direction: column;
         flex-wrap: nowrap;
         justify-content: flex-start;
         align-items: flex-start;
         background:#EDF0F5;
+        overflow: hidden;
       }
 
     .frame-login{
@@ -2286,9 +2330,9 @@ body>.navbar-collapse .logo {
         position: relative;
         flex-direction: column;
         justify-content: flex-start;
-
+        max-width: 650px;
         width: 100%;
-        height: 100%;
+        height: 80%;
     }
 
     .background-login {
@@ -2322,18 +2366,64 @@ body>.navbar-collapse .logo {
     .loginLogo{
         display: none;
     }
+
+    .login-box{
+        display:flex;
+        flex-direction: column;
+    }
+
+    .container-form-login{
+        display: flex;
+        position: absolute;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        align-items: center;
+        padding:16px;
+    }
+
     .form-login{
         width: 100%;
-        height: 80%;
+        height: 100%;
         display: flex; 
         position: absolute;
         flex-direction: column;
-        /* justify-content: center; */
         align-items: center;
         margin-top: 124px;  
         margin-left: 0px;
         background:#EDF0F5;
     }
+    .alert-login{
+        position: absolute;
+        width: 92%;
+        height: 92px;
+        margin-left:16px;
+        margin-top: 124px;
+        margin-right: auto;
+        z-index: 300;
+        background: #F03738;
+        opacity: 0.2;
+        border-radius: 6px;
+        padding: 8px 16px 8px 16px;
+    }
+
+    .alert-login-text{
+        position: absolute;
+        margin-left: 20px;
+        margin-top: 124px;
+        margin-right: 16px;
+        z-index: 300;
+        font-family: Source Sans Pro;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.15px;
+        opacity: 100%;
+        color: #F03738;
+    }
+    
+
     .form-input{
     display: flex; 
     position: relative;
@@ -2402,7 +2492,7 @@ body>.navbar-collapse .logo {
         padding: 8px 16px 8px 16px;
     }
     
-    #alert-password-text{
+    .alert-password-text{
         position: absolute;
         margin-left: 20px;
         margin-top: 124px;
@@ -2418,7 +2508,7 @@ body>.navbar-collapse .logo {
         color: #F3BB1C; 
     }
     
-    #alert-password-saved-text{
+    .alert-password-saved-text{
         position: absolute;
         margin-left: 20px;
         margin-top: 124px;
@@ -2437,9 +2527,6 @@ body>.navbar-collapse .logo {
 
     .sidebar-dashboard{
         display: none;
-    }
-    .dashboard-box{
-        overflow-x: hidden;
     }
     .content-dashboard{
         margin-left: 0px;
