--- a/src/components/sb-admin-2.css
+++ b/src/components/sb-admin-2.css
@@ -22,7 +22,7 @@ body {
 .container-login {
   width: 100%;
   height: 100%;
-  min-width: 1300px;
+  /* min-width: 1300px; */
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -359,6 +359,7 @@ body {
 }
 
 .send-button{
+    position: absolute;
     width: 296px;
     height: 40px;
     background: #004445;
@@ -371,7 +372,7 @@ body {
     text-align: center;
     vertical-align: middle;
     color: #FFFDFF;
-    margin-top: 32px;
+    margin-top: 224px;
     margin-bottom: 8px;
 }
 
@@ -2143,8 +2144,7 @@ body {
         font-size: 12px;
         line-height: 16px;
         color: #C43006;
-        margin-left: 24px;
-        display:none;
+        /* margin-left: 24px; */
     }
 
     .error-password img{
@@ -2194,6 +2194,81 @@ body {
         line-height: 20px;
         color: #474748;
         margin-top:8px;
+    }
+
+    .popup-content {
+        background: none !important;
+        border: none !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+     }
+
+    .popup-new-entry{
+        max-width: 50%;
+        /* height: 264px; */
+        background-color: #FFFDFF;
+        box-shadow: 2px 4px 15px rgba(114, 110, 115, 0.2);
+        border-radius: 6px;
+        padding:24px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .popup-new-entry-title{
+        font-size: 16px;
+        line-height: 24px;
+        text-align: center;
+        letter-spacing: 0.15px;
+        color: #004445;
+        margin:8px;
+    }
+    .popup-new-entry-content{
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.25px;
+        color: #474748;
+        margin-bottom:16px;
+    }
+    .popup-new-entry-button{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .popup-new-entry-button-cancel{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 112px;
+        height: 32px;
+        border: 1px solid #004445;
+        box-sizing: border-box;
+        border-radius: 6px;
+        font-size: 14px;
+        line-height: 20px;
+        color: #004445;
+        margin-right: 16px;
+        margin-bottom: 16px;
+        cursor: pointer;
+    }
+
+    .popup-new-entry-button-save{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 112px;
+        height: 32px;
+        background-color: #004445;
+        border-radius: 6px;
+        font-size: 14px;
+        line-height: 20px;
+        color: #FFFDFF;
+        cursor: pointer;
     }
 
 /* .wrap-login100 {
@@ -2456,7 +2531,7 @@ body>.navbar-collapse .logo {
     }
     .form-new-password{
         width: 100%;
-        /* height: 80%; */
+        height: 80%;
         align-items: center;
         margin-top: 100px;  
         margin-left: 0px;
@@ -2523,6 +2598,10 @@ body>.navbar-collapse .logo {
         color: #3CC13B;
         
     }
+
+    /* .send-button{
+        position: relative;
+    } */
 
     .sidebar-dashboard{
         display: none;
