--- a/src/components/sb-admin-2.css
+++ b/src/components/sb-admin-2.css
@@ -562,10 +562,16 @@ body {
 }
 
 .navbar-dashboard{
-    width: calc(100% - 256px);
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+    /* width: 100%; */
     height: 64px;
     background-color:#004445;
-    /* position: fixed; */
 }
 
 
@@ -628,7 +634,7 @@ body {
     }
 
     .dropdown-menu-box{
-        display:block;
+        /* display:block; */
         position: absolute;
         width: 256px;
         height: 157px;
@@ -778,17 +784,17 @@ body {
         margin: auto;
         background-color: rgba(0,0,0, 0.5);
     }
-    .popup_inner {
+    .popup-inner {
         position: absolute;
         width: 284px;
         height: 224px;
-        left: 498px;
-        top: 172px;
+        /* left: 498px;
+        top: 172px; */
         margin: auto;
         background: white;
     }
 
-    .popup_inner img {
+    .popup-inner img {
         margin-top:24px;
         margin-left:110px;
         margin-bottom:8px;
@@ -866,6 +872,7 @@ body {
         padding: 24px;
         overflow-x: hidden;
         width: calc(100% - 256px);
+        z-index: -1;
     }
 
     .top-container-dashboard{
@@ -1967,16 +1974,14 @@ body {
     }
 
     .profile-box{
+        position:relative;
         display: flex;
         flex-direction: column;
         width: 374px;
-        height: 490px;
-        margin-left: 24px;
-        margin-top: 24px;
-        margin-bottom: 24px;
+        /* height: 490px; */
         background: #FFFDFF;
         border-radius: 6px;
-        padding-top: 24px;
+        padding: 24px;
     }
     
 
@@ -2060,9 +2065,9 @@ body {
         display:none;
     }
 
-    #profile-update-password{
+    /* #profile-update-password{
         display:none;
-    }
+    } */
 
     .profile-update-password-text{
         font-family: Source Sans Pro;
@@ -2073,19 +2078,18 @@ body {
         letter-spacing: 0.15px;
         color: #474748;
         margin-top:24px;
-        margin-left:24px;
+        /* margin-left:24px; */
         margin-bottom: 24px;
     }
 
     .profil-update-box{
         display: flex;
         flex-direction:column;
-        position: relative;
+        /* position: relative; */
     } 
 
     .profile-update-label{
         margin-top: 16px;
-        margin-left: 24px;
         font-family: Source Sans Pro;
         font-style: normal;
         font-weight: normal;
@@ -2096,9 +2100,7 @@ body {
 
     .profile-password-box{
         display: flex; 
-        /* position: relative; */
         flex-direction: row;
-        /* justify-content: flex-start; */
         
     }
     
@@ -2111,8 +2113,6 @@ body {
         padding-bottom: 8px;
         padding-right: 8px;
         margin-top: 8px;
-        margin-left: 24px;
-        /* margin-bottom: 16px; */
         margin-right: -40px;
         border: 1px solid #C5C9D7;
         border-radius: 6px;
@@ -2126,8 +2126,9 @@ body {
         
         display: flex;
         flex-direction: row;
-        margin-top: 72px;
-        margin-left: 110px;
+        justify-content: flex-end;
+        margin-top:72px;
+        /* margin-left: 110px; */
     }
 
     .profile-update-password-save-button{
@@ -2179,11 +2180,8 @@ body {
         justify-content: center;
         align-items: center;
         text-align: center;
-        position: absolute;
-        width: 280.81px;
+        width: 280px;
         height: 176px;
-        left: 498px;
-        top: 182px;
         margin: auto;
         background: white;
     }
