--- a/src/components/sb-admin-2.css
+++ b/src/components/sb-admin-2.css
@@ -168,6 +168,7 @@ input:focus{
     opacity: 0.2;
     border-radius: 6px;
     padding: 8px 16px 8px 16px;
+    z-index: 1
 }
 
 .alert-login-text{
@@ -2375,116 +2376,10 @@ input:focus{
         cursor: pointer;
     }
 
-/* .wrap-login100 {
-  width: 670px;
-  background: #fff;
-  border-radius: 10px;
-  overflow: hidden;
-  position: relative;
-} */
-
-/*==================================================================
-[ Title form ]*/
-/* .login100-form-title {
-  width: 100%;
-  position: relative;
-  z-index: 1;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-
-  background-image: url('../img/IMERI.jpeg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-
-  padding: 70px 15px 74px 15px;
-}
-
-.login100-form-title-1 {
-  font-family: Arial;
-  font-size: 30px;
-  color: #fff;
-  text-transform: uppercase;
-  line-height: 1.2;
-  text-align: center;
-}
-
-.login100-form-title::before {
-  content: "";
-  display: block;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(54,84,99,0.7);
-} */
-
-
-/*==================================================================
-[ Form ]*/
-
-/* .sidebar,
-body>.navbar-collapse {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 256px;
-    display: block;
-    z-index: 1;
-    color: #fff;
-    font-weight: 200;
-    background-size: cover;
-    background-position: center center;
-}
-
-.sidebar .sidebar-wrapper,
-body>.navbar-collapse .sidebar-wrapper {
-    position: relative;
-    max-height: calc(100vh - 75px);
-    min-height: 100%;
-    overflow: auto;
-    width: 256px;
-    z-index: 4;
-    padding-bottom: 100px;
-}
-
-.sidebar .sidebar-background,
-body>.navbar-collapse .sidebar-background {
-    position: absolute;
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    display: block;
-    top: 0;
-    left: 0;
-    background-size: cover;
-    background-position: center center;
-}
-
-.sidebar .logo,
-body>.navbar-collapse .logo {
-    display: flex;
-    flex-direction: row;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    position: relative;
-    z-index: 4;
-    height: 64px;
-    width: 256px;
-    background-color: #008C8F;
-} */
-
+/* for mobile web screen */
 
 @media only screen and (max-width:650px) {
-    /* For mobile phones: */
+
 
     .container-login {
         min-width: 0px;
@@ -2571,6 +2466,8 @@ body>.navbar-collapse .logo {
         margin-left: 0px;
         background:#EDF0F5;
     }
+
+
     .alert-login{
         position: absolute;
         width: 92%;
@@ -2622,6 +2519,7 @@ body>.navbar-collapse .logo {
     }
     .login-text{
         margin-top: 24px;
+        text-align :left;
     }
     .confirm-send-email{
         width: 100%;
@@ -2703,10 +2601,6 @@ body>.navbar-collapse .logo {
         
     }
 
-    /* .send-button{
-        position: relative;
-    } */
-
     .sidebar-dashboard{
         display: none;
     }
@@ -2715,10 +2609,17 @@ body>.navbar-collapse .logo {
         justify-content: center;
         overflow: hidden;
     }
+
+    .dashboard-box{
+        position:relative;
+        width: 100%;
+    }
+
     .top-container-dashboard{
         
-        width: 328px;
-        height: 167px;
+        width: 100%;
+        height: 100%;
+        padding: 24px;
     }
     .quote-dashboard{
         display: flex;
@@ -2728,7 +2629,6 @@ body>.navbar-collapse .logo {
         margin-top: 24px;
         margin-left: auto;
         margin-right: auto;
-
     }
 
     .quote-username-dashboard{
@@ -2751,9 +2651,57 @@ body>.navbar-collapse .logo {
         letter-spacing: 0.15px;
         color: #FFFDFF;
     }
-
-
     .quote-logo-dashboard{
+        display: none;
+    }
+
+    .stase{
+        width: 100%;
+    }
+
+    .row1-container-dashboard{
+        width:fit-content;
+    }
+
+    .row1-container-dashboard-content {
+        width: 282px;
+        height: 92px;
+    }
+
+    .row1-text {
+        margin-top: 16px;
+        margin-left: 16px;
+    }
+    .row2-container-dashboard {
+        flex-direction: column;
+    }
+
+    .row2-container-dashboard-content {
+        width: 100%;
+        height: 228px;
+    }
+
+    .dashboard-graph{
+        width: 100%;
+    }
+
+    .dashboard-graph img{
+        width: 100%;
+    }
+
+
+    /*navbar*/
+    .navbar-avatar-box{
+        flex-direction: row-reverse;
+        right: 16px;
+        color: #FFFDFF;
+        z-index: 1;
+    }
+
+    .navbar-expand{
+        display: none;
+    }
+    .navbar-name{
         display: none;
     }
     
