--- a/src/components/sb-admin-2.css
+++ b/src/components/sb-admin-2.css
@@ -979,6 +979,7 @@ input:focus{
 
     .row1-container-dashboard-content{
         height: 140px;
+        width: 100%;
         background: #FFFDFF;
         border-radius: 6px;
         margin-top: 16px;
@@ -986,7 +987,7 @@ input:focus{
         box-shadow: 2px 4px 15px rgba(114, 110, 115, 0.2);
     }
 
-    #row1-container-dashboard-case{
+    /* #row1-container-dashboard-case{
         width: 296px;
     }
 
@@ -996,12 +997,16 @@ input:focus{
 
     #row1-container-dashboard-stase{
         width: 400px;
-    }
+    } */
 
     .row1-container-dashboard-content img{
         float:right;
         width: 72px;
         height: 72px;
+    }
+
+    .row1-container-dashboard-mobile{
+        display:none;
     }
 
     .row1-text{
@@ -2606,12 +2611,11 @@ input:focus{
     }
     .content-dashboard{
         margin-left: 0px;
-        justify-content: center;
         overflow: hidden;
     }
 
     .dashboard-box{
-        position:relative;
+        /* position:relative; */
         width: 100%;
     }
 
@@ -2661,6 +2665,15 @@ input:focus{
 
     .row1-container-dashboard{
         width:fit-content;
+        display:none;
+    }
+
+    .row1-container-dashboard-mobile{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width:fit-content;
+        display:block;
     }
 
     .row1-container-dashboard-content {
@@ -2689,6 +2702,10 @@ input:focus{
         width: 100%;
     }
 
+    #dashboard-table-content{
+        width: 100%;
+    }
+
 
     /*navbar*/
     .navbar-avatar-box{
@@ -2704,6 +2721,37 @@ input:focus{
     .navbar-name{
         display: none;
     }
+
     
+    /*profile*/
+    .profile-box{
+        width:100%;
+    }
+    .profile-avatar-box{
+        align-items: flex-start;
+        margin-left: 24px;
+    }
+
+    .skdi-search-box{
+        display:none;
+    }
+    .skdi-box{
+        overflow-x: hidden;
+        overflow-y: auto;
+        width: 100%;
+    }
+
+    .skdi-row1-info{
+        display:none;
+    }
+
+    .skdi-select{
+        width: auto;
+    }
+
+    .skdi-table-content{
+        width:100%;
+    }
+
   }
-  
+
