--- a/src/components/sb-admin-2.css
+++ b/src/components/sb-admin-2.css
@@ -179,7 +179,7 @@ input:focus{
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.15px;
-    opacity: 100%;
+    opacity: 1;
     color: #F03738;
     margin-top: 8px;
     margin-left: 16px;
@@ -2499,7 +2499,7 @@ input:focus{
         font-size: 16px;
         line-height: 24px;
         letter-spacing: 0.15px;
-        opacity: 100%;
+        opacity: 1;
         color: #F03738;
     }
     
